--- a/report/gioi_thieu.tex
+++ b/report/gioi_thieu.tex
@@ -86,4 +86,9 @@ Trong bài tập lớn này sẽ sử dụng Python và các thư viện hỗ tr
         \item Thư viện hỗ trợ tạo giao diện người dùng UI \textit{(User Interface}).
     \end{itemize}
 \end{itemize}
-
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\linewidth]{Images/software.png}
+	\caption{Chương trình được viết bằng Python}
+	\label{fig:enter-label1}
+\end{figure}
