--- a/report/main.tex
+++ b/report/main.tex
@@ -179,30 +179,34 @@
 \newpage
 \input{jacobi}
 \newpage
-\input{pathFinding}
-\newpage
+
 \section{ĐÁNH GIÁ CHUNG VÀ KẾT LUẬN}
-Sau thời gian thực hiện bài tập lớn số 1 môn Nhập môn Trí tuệ nhân tạo, nhóm có những đánh giá và kết luận chung sau khi hoàn thành bài tập lớn này như sau :
+Sau thời gian thực hiện bài tập lớn môn Nhập môn Kỹ thuật Robot, em có những đánh giá và kết luận chung sau khi hoàn thành bài tập lớn này như sau:
 \begin{itemize}
     \item Về những kết quả thu được:
     \begin{itemize}
         \item Biết cách mô phỏng bài toán cũng như kết quả dưới dạng các ứng dụng đơn giản trên nền tảng ngôn ngữ Python 3 bằng cách áp dụng linh hoạt các module cũng như sử dụng các framework hiệu quả.
         \item Hiểu được cấu trúc và những thành phần cơ bản của các bài toán để từ đó xây dựng được các cấu trúc để mô phỏng bài toán. 
-        \item Đã hiểu rõ cũng như biết cách áp dụng 4 giải thuật tìm kiếm cơ bản đó là Depth-First Search, Genetic, A* Search  vào để tìm lời giải cho bài toán.
-        \item Cải thiện được khả năng lập trình bằng ngôn ngữ Python 3, tận dụng các module sẵn có vô cùng hữu ích của ngôn ngữ này. 
-        \item Nâng cao khả năng làm việc theo nhóm cũng như khả năng hoàn thành công việc độc lập và đúng thời gian của từng thành viên trong nhóm. 
+        \item Đã hiểu rõ cũng như biết cách áp dụng bài toán động học thuận/nghịch, jacobi vào để giả lập chuyển động robot trong thực tế.
+        \item Cải thiện được khả năng lập trình bằng ngôn ngữ Python 3, tận dụng các module sẵn có vô cùng hữu ích của ngôn ngữ này.
     \end{itemize}
     \item Về những hạn chế còn tồn đọng:
     \begin{itemize}
         \item Cải thiện được khả năng lập trình bằng ngôn ngữ Python 3, tận dụng các module sẵn có vô cùng hữu ích của ngôn ngữ này.
     \end{itemize}
 \end{itemize}
-Qua những đánh giá và kết luận chung như trên, các thành viên của nhóm đều nhận thấy rằng bản thân đã học thêm được khá nhiều điều mới lạ và đã rèn dũa thêm được những kỹ năng sẵn có. Tuy vậy thì nhóm cũng nhận ra được vẫn còn khá nhiều khuyết điểm quan trọng cần được khắc phục ngay để có thể thực hiện những dự án khác trong tương lai một cách đầy đủ và hoàn thiện hơn. 
+Qua những đánh giá và kết luận chung như trên, em nhận thấy rằng bản thân đã học thêm được khá nhiều điều mới lạ và đã rèn dũa thêm được những kỹ năng sẵn có. Tuy vậy thì em cũng nhận ra được vẫn còn khá nhiều khuyết điểm quan trọng cần được khắc phục ngay để có thể thực hiện những dự án khác trong tương lai một cách đầy đủ và hoàn thiện hơn. 
 \section{VIDEO DEMO VÀ CODE PYTHON}
 Link video thuyết trình: \href{}{Nền tảng Youtube}\\
 Link slide thuyết trình: \href{}{Nền tảng Canva}
-\addcontentsline{toc}{section}{Tài liệu}
+\addcontentsline{toc}{section}{Tài liệu tham khảo}
 \begin{thebibliography}{99999}
+
+\bibitem{Robotics}
+Bruno Siciliano, Lorenzo Sciavicco, Luigi Villani, and Giuseppe Oriolo. 2008. Robotics: Modelling, Planning and Control (1st. ed.). Springer Publishing Company, Incorporated.
+
+\bibitem{Learning Python}
+Mark Lutz. 2009. Learning Python: Powerful Object-Oriented Programming (4th. ed.). O'Reilly Media, Inc.
 
 \end{thebibliography}
 \end{document}
