--- a/report/inverse_kine.tex
+++ b/report/inverse_kine.tex
@@ -24,7 +24,7 @@ $^{0}T_{3} = {^{0}T_{1}} {^{1}T_{2}} {^{2}T_{3}} = \begin{bmatrix}
 \end{bmatrix}$
 \end{center}
 
-Với input $
+Với input $3$
 
 \subsection{Xây dựng UI và Animation cho bài toán động lực nghịch}
 \subsubsection{Giao điện người dùng UI}
