--- a/report/main.tex
+++ b/report/main.tex
@@ -177,8 +177,7 @@
 \newpage
 \input{trajectory_plan}
 \newpage
-\input{jacobi}
-\newpage
+
 
 \section{ĐÁNH GIÁ CHUNG VÀ KẾT LUẬN}
 Sau thời gian thực hiện bài tập lớn môn Nhập môn Kỹ thuật Robot, em có những đánh giá và kết luận chung sau khi hoàn thành bài tập lớn này như sau:
@@ -197,8 +196,8 @@ Sau thời gian thực hiện bài tập lớn môn Nhập môn Kỹ thuật Rob
 \end{itemize}
 Qua những đánh giá và kết luận chung như trên, em nhận thấy rằng bản thân đã học thêm được khá nhiều điều mới lạ và đã rèn dũa thêm được những kỹ năng sẵn có. Tuy vậy thì em cũng nhận ra được vẫn còn khá nhiều khuyết điểm quan trọng cần được khắc phục ngay để có thể thực hiện những dự án khác trong tương lai một cách đầy đủ và hoàn thiện hơn. 
 \section{VIDEO DEMO VÀ CODE PYTHON}
-Link video thuyết trình: \href{}{Nền tảng Youtube}\\
-Link slide thuyết trình: \href{}{Nền tảng Canva}
+Link video demo: \href{}{Nền tảng Youtube}\\
+
 \addcontentsline{toc}{section}{Tài liệu tham khảo}
 \begin{thebibliography}{99999}
 
